--- a/gb/19/10/25/n11611995.md
+++ b/gb/19/10/25/n11611995.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mpeokj385/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mpeokj385/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mpeokj385/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mpeokj385/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mpeokj385/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mpeokj385/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mpeokj385/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mpeokj385/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mpeokj385/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mpeokj385/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mpeokj385/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mpeokj385/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mpeokj385/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mpeokj385/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mpeokj385/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mpeokj385/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/mpeokj385/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mpeokj385/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/mpeokj385/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mpeokj385/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mpeokj385/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mpeokj385/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mpeokj385/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mpeokj385/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>2020年找工作EQ是关键 自我检测提升EQ</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2014/10/1312071332372003-570x400.jpg" />
 <h6>EQ高的人善于与人沟通协调，团队合作精神佳，愈来愈受到企业主的青睐。〈Fotolia〉 
 </h6>
 <hr>
-	<p>【大纪元2019年10月27日讯】（大纪元记者陈霆编译报导）为什么现在的工作那么难找？随着机器人学、奈米科技、人工智慧、量子电脑等高科技的发展，人们的工作也面临了前所未有的冲击。学习新的技能固然重要，但还有一项比技术更重要的能力是机器无法取代人类的，那就是EQ（<ahref="https://github.com/mpeokj385/djy/blob/master/gb/tag/%E6%83%85%E5%95%86.md#1">情商</a>）。</p>
+	<p>【大纪元2019年10月27日讯】（大纪元记者陈霆编译报导）为什么现在的工作那么难找？随着机器人学、奈米科技、人工智慧、量子电脑等高科技的发展，人们的工作也面临了前所未有的冲击。学习新的技能固然重要，但还有一项比技术更重要的能力是机器无法取代人类的，那就是EQ<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%83%85%E5%95%86.md#1">情商</a>）。</p>
 <p><span class="s1">世界经济论坛预测2020年企业招聘人才考量的重点将会是EQ，EQ高的员工在工作场合人际关系的表现优于一切。美国知名心理及性格测验机构TalentSmart曾进行一项100万人的大型测试，结果显示，工作表现优秀的上班族90％都有很高的EQ，平均比低EQ人的年收入多出29000万美金。并且，不论测试者从事哪种行业，他们之中58％的成功都归功于好的EQ。</span></p>
 <h3 class="p3"><strong><span class="s1">EQ可以训练</span></strong></h3>
-<figure id="attachment_6058566" style="width: 478px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2011/09/1109131222272184.jpg"><img class="wp-image-6058566 size-full" src="https://i.epochtimes.com/assets/uploads/2011/09/1109131222272184.jpg" alt="" width="478" b="359" /></a><figcaption class="wp-caption-text">高EQ的人懂得如何排解情绪、解决问题。(图 :photos.com)</figcaption></figure>
+<figure id="attachment_6058566" aria-describedby="caption-attachment-6058566" style="width: 478px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2011/09/1109131222272184.jpg"><img class="wp-image-6058566 size-full" src="https://i.epochtimes.com/assets/uploads/2011/09/1109131222272184.jpg" alt="" width="478" b="359" /></a><figcaption id="caption-attachment-6058566" class="wp-caption-text">高EQ的人懂得如何排解情绪、解决问题。(图 :photos.com)</figcaption></figure>
 <p class="p1"><span class="s1">EQ是控制和表达自我情绪并认识他人情绪的能力。高EQ的人较为正直、具有同理心，能与他人建立更稳固的伙伴关系。</span></p>
-<p class="p1"><span class="s1">跟智商（</span><span class="s2">IQ</span><span class="s1">）不同的是<ahref="https://github.com/mpeokj385/djy/blob/master/gb/tag/%E6%83%85%E5%95%86.md#1">情商</a>可经由学习与训练而提升。一般而言，人的智商从儿童时期会持续发展，进入青春期以后渐渐趋于稳定，在</span><span class="s2">15</span><span class="s1">岁到</span><span class="s2">50</span><span class="s1">岁之间不会有明显的变化。然而，EQ是一种灵活的能力，会随着人生历练与自我学习而成长。</span></p>
+<p class="p1"><span class="s1">跟智商（</span><span class="s2">IQ</span><span class="s1">）不同的是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%83%85%E5%95%86.md#1">情商</a>可经由学习与训练而提升。一般而言，人的智商从儿童时期会持续发展，进入青春期以后渐渐趋于稳定，在</span><span class="s2">15</span><span class="s1">岁到</span><span class="s2">50</span><span class="s1">岁之间不会有明显的变化。然而，EQ是一种灵活的能力，会随着人生历练与自我学习而成长。</span></p>
 <h3 class="p3"><strong><span class="s1">自我检测EQ</span></strong></h3>
 <p class="p1"><span class="s1">尽管EQ至关重要，但它看不见也摸不着，参加正式的情商测试也需一笔费用。以下我们整理了作家兼企业主管教练马塞尔</span><span class="s2">·</span><span class="s1">施万特斯（</span><span class="s2">Marcel Schwantes</span><span class="s1">）精心选择的六个问题，可以用来自我检测EQ的程度。请看自己回答“是”的答案有几个？</span></p>
 <p class="p1"><span class="s1">1.您通常能知道自己的感受，以及为什么会有这样的感受吗？</span></p>
@@ -25,7 +25,7 @@
 <p class="p1"><span class="s2">2009尔菲</span><span class="s2">·内利斯（</span><span class="s2">Delphine Nelis）对</span><span class="s2">40</span><span class="s1">名大学生进行测验，发现受过EQ训练的学生，不仅明显改善了情感能力，而且在实验</span><span class="s2">6</span><span class="s1">个月后仍能维持着训练后的成果。这也说明了教育可以对人们的EQ产生长期的影响。</span></p>
 <p class="p1"><span class="s1">专家建议每天用心练习以下五个提升EQ的小技巧：</span></p>
 <p class="p1">?<strong><span class="s2">1. </span><span class="s1">识别负面情绪</span></strong></p>
-<p class="p1"><span class="s1">情商有很大一部分在于<ahref="https://github.com/mpeokj385/djy/blob/master/gb/tag/%E6%83%85%E7%BB%AA%E7%AE%A1%E7%90%86.md#1">情绪管理</a>。处理好自己的情绪可以使我们变得更有弹性，同时降低压力的影响。首先，要练习辨别使我们沮丧的情绪，再“选择”自己想要的回应方式。</span></p>
+<p class="p1"><span class="s1">情商有很大一部分在于<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%83%85%E7%BB%AA%E7%AE%A1%E7%90%86.md#1">情绪管理</a>。处理好自己的情绪可以使我们变得更有弹性，同时降低压力的影响。首先，要练习辨别使我们沮丧的情绪，再“选择”自己想要的回应方式。</span></p>
 <p class="p1"><span class="s1">例如：当遇到某人让您不高兴或使用苛刻的言语对待时，请不要立即做出反应。花一些时间收集自己的想法，确定自己的感觉，再决定要怎么回应对方。</span></p>
 <p class="p1"><strong><span class="s2">2. </span><span class="s1">练习自我表达</span></strong></p>
 <p class="p1"><span class="s1">自我表达意味着专注与他人沟通，并用自然、舒适的方式传达内心的想法与感受，并致力于通过沟通解决问题。专家建议，最好能定期维护自己的交友圈，找家人朋友谈心，这可以让自我表达能力自然发展。</span></p>
@@ -44,42 +44,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/16/11/29/n8537933.md#1">孩子的EQ高不高，关键在父母</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/18/4/24/n10332240.md#1">主管高EQ 带出优质好团队</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/18/4/24/n10332475.md#1">5关键 高EQ主管带出高效能优质团队</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/18/12/16/n10913951.md#1">高EQ从小养成 关键是亲子互动</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/11/29/n8537933.md#1">孩子的EQ高不高，关键在父母</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/4/24/n10332240.md#1">主管高EQ 带出优质好团队</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/4/24/n10332475.md#1">5关键 高EQ主管带出高效能优质团队</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/16/n10913951.md#1">高EQ从小养成 关键是亲子互动</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513377.md#1" target="_blank">土改中的按比例杀人与反人类酷刑</a></li><li><a href="https://github.com/mpeokj385/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/8/n11370721.md#1" target="_blank">爱德华?斯考特: 对迫害善良的一个政治上的回应</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/1/n9913343.md#1" target="_blank">淳子：闺秀文革自杀名单</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11490640.md#1" target="_blank">来自摩尔多瓦的心声：道德是人类真正价值</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/20/12/30/n12654008.md#1">2021年的六大预言：灾难与救赎</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/21/1/1/n12659278.md#1">川普签法案 国防部180天内须揭露UFO讯息</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/21/1/4/n12665017.md#1">蓝色UFO出现在夏威夷夜空 随后俯冲入海</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/21/1/3/n12663595.md#1">屡遭YouTube删片 印度爆红占星师开设网站</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/20/12/30/n12655241.md#1">你今世的亲人必与你结过前缘</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/21/1/6/n12670707.md#1">【珍言真语】何良懋：中共用完即丢 林郑恐被抛</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/21/1/5/n12668830.md#1">【秦鹏直播】拳打伊朗脚踢中共 川普在全球收网</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/21/1/6/n12669343.md#1">【唐青看时事】国会认证拜登？三剑客能否阻止</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/21/1/4/n12666220.md#1">【独家】川普在宾州的43.2万选票被删除</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/21/1/4/n12666762.md#1">“‘李娜’退出中国国籍”上微博热搜</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/21/1/4/n12666258.md#1">传美方已掌控证人 美国安高官：实验室泄病毒</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/21/1/4/n12664632.md#1">赵丽颖发文宣传新剧 意外暴露用“古董”手机</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/21/1/4/n12666681.md#1">林青霞贺年图片藏玄机？网络疯传其豪门婚变</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/21/1/3/n12664153.md#1">玄彬和孙艺真恋情公开 江疏影的反应笑翻网络</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/21/1/5/n12667940.md#1">畅谈生活 黄秋生人在台湾：没发现我很开心吗</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/21/1/4/n12666446.md#1">遛狗返家倒地不起 007邦女郎坦娅·罗伯茨骤逝</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/21/1/4/n12665282.md#1">马铃薯是减肥者的好淀粉 这样保存不怕发芽</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/21/1/4/n12665017.md#1">蓝色UFO出现在夏威夷夜空 随后俯冲入海</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/21/1/4/n12665269.md#1">印度警察救起铁轨上的老人 再赏他耳光</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/21/1/4/n12665511.md#1">美死刑犯打18剂毒针没死 最终死于中共病毒</a></li>
-<li><a href="https://github.com/mpeokj385/djy/blob/master/gb/21/1/4/n12666327.md#1">小寒是最冷的节气！男女各有1个部位要保暖</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mpeokj385/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mpeokj385/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/25/n11611995.htm">2020年找工作EQ是关键 自我检测提升EQ</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/25/n11611995.htm">2020年找工作EQ是关键 自我检测提升EQ</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mpeokj385/djy/blob/master/gb/19/10/25/n11611995.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mpeokj385/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mpeokj385/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mpeokj385/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mpeokj385/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mpeokj385/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/10/25/n11611995.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
